Fix overflowing account chooser label

--- a/src/platform/web/ui/css/login.css
+++ b/src/platform/web/ui/css/login.css
@@ -42,6 +42,8 @@ limitations under the License.
 
 .SessionPickerView li .user-id {
     flex: 1;
+    overflow: hidden;
+    text-overflow: ellipsis;
 }
 
 .SessionPickerView li .error {
